--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,9 @@ body{
 .standout{
   box-shadow: 0px 1px 4px rgb(0, 0, 0, .16), 0px 0px 0px 3px rgb(51 51 51);
 }
+
+@media (max-width: 600px){
+  .card-collection{
+      grid-template-columns: 1fr
+  }
+}
